--- a/about.html
+++ b/about.html
@@ -18,12 +18,14 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="#">Home</a>
+       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link active" aria-current="page" href="iCoderBootstrap/">Home</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link active" href="#">About</a>
+            <a class="nav-link" href="/iCoderBootstrap/about.html">About</a>
+          </li>
+
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -40,9 +42,8 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact us</a>
+            <a class="nav-link" href="/iCoderBootstrap/contact.html">Contact us</a>
           </li>
-
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
